--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 rosu = "0.6.0"
 rosu-v2 = "0.11.0"
+sparklines = "0.3.0"
 tokio = { version = "1.47.1", features = ["full"] }
