--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2024"
 rosu = "0.6.0"
 rosu-v2 = "0.11.0"
 sparklines = "0.3.0"
+text_io = "0.1.13"
 tokio = { version = "1.47.1", features = ["full"] }
