--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+crossterm = "0.29.0"
 image = "0.25.6"
+ratatui = "0.29.0"
 # rosu = "0.6.0"
 rosu-v2 = "0.11.0"
 sparklines = "0.3.0"
